--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
       const minutes = now.getMinutes();
 
       const timeframes = [
-        {start: {hours: 8, minutes: 30}, end: {hours: 10, minutes: 30}},
-        {start: {hours: 13, minutes: 30}, end: {hours: 15, minutes: 0}},
+        {start: {hours: 8, minutes: 30}, end: {hours: 11, minutes: 00}}
       ];
 
       if (day >= 1 && day <= 5) {
